# ranked_bot_v2

./: Cargo.toml  config.json  db.db
src/: bridge.rs  checks.rs  commands.rs  config.rs  error.rs  main.rs  model.rs  utils.rs
src/commands/: info.rs  lobby.rs  misc.rs
src/model/: database.rs  game.rs  lobby.rs  rating.rs
src/utils/: leaderboard.rs  matchmaking.rs
