[package]
name = "ranked_bot_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false }
harmony = { git = "https://github.com/lfenart/harmony", rev = "dda268a", default-features = false, features = ["rustls"] }
inline-python = { version = "0.8", default-features = false }
itertools = { version = "0.10", default-features = false, features = ["use_alloc"] }
parking_lot = { version = "0.12", default-features = false }
rand = { version = "0.8", default-features = false }
rayon = { version = "1", default-features = false }
rusqlite = { version = "0.27", default-features = false, features = ["bundled"] }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde_repr = { version = "0.1", default-features = false }
trueskill = { git = "https://github.com/lfenart/trueskill", rev = "dee2096", default-features = false, features = ["serde"] }
